--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,5 +18,6 @@
     <string name="permission_denied_message">[설정] > [권한]에서 권한을 허용하시오.</string>
 
     <!-- sample -->
+    <string name="sample_android_id">1234567890abcdef</string>
 
 </resources>
