--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,6 +17,7 @@
     <!-- button -->
     <string name="setting">설정</string>
     <string name="close">닫기</string>
+    <string name="button">버튼</string>
 
     <!-- permission -->
     <string name="permission_denied_message">[설정] > [권한]에서 권한을 허용하시오.</string>
