[feat] 1. 전화번호가 나오지 않을 경우, 특정 문구가 나타나도록 대체 2. 한국 전화 번호 지역 번호 형태로 format 시 중간에 하이픈(-)도 같이 표시되도록 수정

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,6 +18,7 @@
     <string name="usim_serial_number">유심 시리얼 번호</string>
     <string name="kernel">커널</string>
     <string name="build_number">빌드 번호</string>
+    <string name="sim_not_found">유심을 장착 혹은 정상적으로 인식되지 않아 확인 불가</string>
 
     <!-- button -->
     <string name="setting">설정</string>
