--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,8 +19,7 @@
     <string name="kernel">커널</string>
     <string name="build_number">빌드 번호</string>
     <string name="sim_not_found">유심을 장착 혹은 정상적으로 인식되지 않아 확인 불가</string>
-
-    <!-- button -->
+    <string name="other">기타</string>
     <string name="setting">설정</string>
     <string name="close">닫기</string>
     <string name="button">버튼</string>
