[feat] 1. 설정 화면 구성
[todo]
1. 실제 설정 적용 기능 추가 필요

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,6 +23,8 @@
     <string name="setting">설정</string>
     <string name="close">닫기</string>
     <string name="button">버튼</string>
+    <string name="is_use_hyphen">하이픈 사용 여부</string>
+    <string name="is_block_capture">화면 캡쳐 차단 여부</string>
 
     <!-- permission -->
     <string name="permission_denied_message">[설정] > [권한]에서 권한을 허용하시오.</string>
