--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,8 +29,12 @@
     <string name="info">정보</string>
     <string name="version">버전</string>
 
-    <!-- permission -->
+    <!-- dialog -->
     <string name="permission_denied_message">[설정] > [권한]에서 권한을 허용하시오.</string>
+    <string name="exit_app_dialog_title">앱 종료</string>
+    <string name="exit_app_dialog_message">앱을 종료합니다.</string>
+    <string name="check">확인</string>
+    <string name="cancel">취소</string>
 
     <!-- sample -->
     <string name="sample_phone_number">+821012345678</string>
