feat: 다이얼로그 커스터마이징 - 다이얼로그 커스터마이징 - baseviewmodel 로직 수정

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -36,6 +36,9 @@
     <string name="exit_app_dialog_message">앱을 종료합니다.</string>
     <string name="check">확인</string>
     <string name="cancel">취소</string>
+    <string name="close_button">닫기 버튼</string>
+    <string name="shutdown">종료</string>
+    <string name="shutdown_app">앱을 <font color='#f05555'>종료</font>하시겠습니까</string>
 
     <!-- sample -->
     <string name="sample_phone_number">+821012345678</string>
