--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,6 +7,7 @@
     <!-- view -->
     <string name="sim_info">SIM 정보</string>
     <string name="device_info">디바이스 정보</string>
+    <string name="system">시스템</string>
     <string name="phone_number">전화번호</string>
     <string name="telecom">통신사</string>
     <string name="device_brand">브랜드명</string>
@@ -19,6 +20,7 @@
     <string name="kernel">커널</string>
     <string name="build_number">빌드 번호</string>
     <string name="sim_not_found">유심 미장착</string>
+    <string name="last_boot_time">마지막 부팅 시간</string>
     <string name="other">기타</string>
     <string name="setting">설정</string>
     <string name="close">닫기</string>
